# db

./: .gitignore  README.md  data_processing_gui.py  how_to_use.md  readme.txt  y.md
GM/: estimate_human_scale_table.py  hybrik_smpl_distances.json  robot_retargeting_porting_guide.md  smpl_udp_common.py  udp_smpl_to_gmr.py  use.md
GMR/general_motion_retargeting/: motion_retarget.py  params.py  robot_motion_viewer.py
GMR/general_motion_retargeting/ik_configs/: smplx_to_droid_x2.json  smplx_to_kaipu.json  smplx_to_piper.json
GMR/scripts/: gvhmr_to_robot.py  smplx_to_robot.py
assets/: original_esp32_reader_2.py
gui/: smpl_joint_pose_gui.py  use.txt
hybrik_runtime/hybrik/: version.py
mod/1_11/: best_model.pt  metrics.json
mod/1_5/: best_model.pt  metrics.json
mod/1_5_7_9/: best_model.pt  metrics.json
mod/1_9/: best_model.pt  metrics.json
ros2/: kaipu_mujoco_sim.py  read_image.py
ros2/droid_mod/droid_x2_22dof/: x2.urdf  x2_g.xml
ros2/kaipu_model/: 1230-URDF-version-fixed.urdf  1230-URDF-version-fixed.xml  1230-URDF-version-fixed_mode_pos.xml  kaipu_mujoco_udp_player.py  kaipu_smpl_mapping.py  smpl_to_kaipu_mujoco_bridge.py
ros2/kaipu_model/meshes/: base_link.STL  head_pitch.STL  head_yaw.STL  left_ankle_pitch.STL  left_ankle_roll.STL  left_elbow_pitch.STL  left_elbow_yaw.STL  left_hip_pitch.STL  left_hip_roll.STL  left_hip_yaw.STL  left_index_finger_2_pitch.STL  left_index_finger_3_pitch.STL  left_knee_pitch.STL  left_little_finger_2_pitch.STL  left_little_finger_3_pitch.STL  left_middle_finger_2_pitch.STL  left_middle_finger_3_pitch.STL  (+35 more)
ros2/src/hybrik_nodes/: CMakeLists.txt  package.xml
ros2/src/hybrik_nodes/launch/: esp32_imu_reader.launch.py  human_skeleton_tf_publisher.launch.py  live_gru_smpl_infer.launch.py  sensor_udp_streamer.launch.py
ros2/src/hybrik_nodes/scripts/: esp32_imu_reader.py  hybrik_smpl_tf_publisher.py  hybrik_udp_bridge.py  kaipu_mujoco_sim.py  latest_camera_publisher.py  live_gru_smpl_infer.py  sensor_udp_streamer.py
ros2/src/hybrik_nodes/src/: human_skeleton_tf_publisher.cpp
scripts/: README.md  bag_to_csv.py  csv_add_hybrik.py  csv_dataset_info.py  live_gru_udp_infer.py  merge_csv_datasets.py  replay_gru_to_smpl_udp.py  resize_csv_images.py  train_sensor_gru.py
web_visualizer/: README.md  web_visualizer.py
web_visualizer/static/: app.js  styles.css
web_visualizer/templates/: index.html
(+22 files in other folders)
