<?xml version="1.0"?>
<package format="3">
  <name>hybrik_nodes</name>
  <version>0.0.1</version>
  <description>ROS 2 nodes for ESP32 IMU ingestion, camera publishing, and skeleton processing.</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>rclcpp</depend>
  <exec_depend>rclpy</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
